20090107 compat.h,compat/unix/{dir.c,file.c},machine.c,utils.[ch]:
         utils_find_auxiliary_file needs to return a compat_fd, not an int
         (from Wii branch).
20090107 utils.h: fix utils_read_fd prototype (from Wii branch).
20090109 loader.c: don't call readbyte_internal macro with an argument that
	 has side effects (fixes accelerated loaders with gcc 3.x; thanks,
	 Carlos Almeida, Alberto Garcia and Alexander Yurchenko).
20090110 AUTHORS,compat.h,compat/{Makefile.am,wii/{file.c,osname.c,paths.c,
	 timer.c}},configure.in,disk/disk.c,fuse.c,keysyms.pl,menu_data.dat,
	 README,settings.pl,sound/wiisound.c,tape.c,ui/{Makefile.am,
	 widget/{filesel.c,menu.c,widget.c,widget_internals.h},
	 wii/{Makefile.am,wiidisplay.[ch],wiijoystick.c,wiikeyboard.[ch],
	 wiikeysyms.h,wiimouse.[ch],wiiui.c}},utils.c: merge Wii port to
	 trunk (Bjoern Giesler/Philip Kendall).
20090111 configure.in: Wii: Modified configure script so that USE_JOYSTICK is
	 always defined if Wii ui is used (Marek).
20090111 ui/wii/wiimouse.c: Wii: Made wii remote arrows send joystick key codes
	 instead of cursor key codes to the menu since widget now support
	 joystick a little better. This fixed inability to check the checkboxes
	 in the menu (Marek).
20090112 ui/win32/win32ui.c: Win32: Created a simple Help->About message box
	 (Marek).
20090112 compat/win32/timer.c: Win32: Added missing include (Marek).
20090112 configure.in: Win32: Added missing library link needed by the joystick
	 code (Marek).
20090112 ui/win32/{installer/{Makefile.am,fuse.nsi},Makefile.am}: Win32: Added
	 NSIS (nsis.sf.net) installer script (Marek).
20090112 ui/win32/win32joystick.c: Win32: Small correction to the file's header
	 info (Marek).
20090112 ui/win32/installer/fuse.nsi: Win32: Added information and license to
	 the header of the NSIS installer script (Marek).
20090114 configure.in,ui/win32/{Makefile.am,icons/Makefile.am}: Win32: Fixed
	 autotools scripts so that 'make dist' works properly for win32 ui (Marek).